# vk-photos

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
app/: config.py  gui.py  gui_logger.py  logger.py
app/downloaders/: chat.py  group.py  loader.py  user.py
vk-photos/: config.yaml  functions.py  main.py
